# httpd-logs

./: .flake8  Makefile  Makefile.mk  README.rst  pyproject.toml
.github/workflows/: python-app.yml
httpd_logs/: __main__.py  config.py  handler.py
tests/: test_config.py  test_version.py
