[tool.poetry]
name = "httpd-logs"
version = "0.1.0"
description = "A python PoC to use a HTTPRequestHandler without logs"
authors = ["javier.juarez <Javier.Juarez.Martinez@ibm.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
